--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 				</div>
 				<div id="tweet-content">
 
-					<!-- STEP 2: When the user clicks on the textarea, the textarea should double in size and the character count and Tweet buttons should be revealed. -->
+					<!-- STEP 2: When the user clicks on the textarea, the textarea should double in size and the
+					character count and Tweet buttons should be revealed. -->
 					<!-- HINT: jQuery ".on" eventHandler -->
 					<textarea class="tweet-compose" placeholder="Compose new Tweet..."/></textarea>
 
@@ -25,11 +26,13 @@
 					<!-- HINT: Use CSS -->
 					<div id="tweet-controls">
 
-						<!-- STEP 3: As the user types the character count should decrease. Once it hits 10 character or less the count should turn red -->
+						<!-- STEP 3: As the user types the character count should decrease. Once it hits 10 character or
+						less the count should turn red -->
 						<!-- HINT: jQuery keypress events (keypress, keydown, keyup, etc) -->
 						<div id="char-count">140</div>
 
-						<!-- STEP 4: If the user puts in more than 140 characters, the tweet button should be disabled (and re-enabled when there are <= 140 chars) -->
+						<!-- STEP 4: If the user puts in more than 140 characters, the tweet button should be disabled
+						(and re-enabled when there are <= 140 chars) -->
 						<!-- HINT: javascript length method -->
 						<button class="button" id="tweet-submit">Tweet</button>
 					</div>
@@ -39,7 +42,9 @@
 				<h2>Tweets</h2>
 				<div id="stream">
 
-					<!-- STEP 5: When the user successfully inputs characters and clicks the “Tweet” button, a new tweet should be created and added to the tweet stream in the main column, using the user’s fake profile image in the top left and username/fullname. -->
+					<!-- STEP 5: When the user successfully inputs characters and clicks the “Tweet” button, a new
+					tweet should be created and added to the tweet stream in the main column, using the user’s
+					fake profile image in the top left and username/fullname. -->
 					<!-- HINT: jQuery ".prepend" method -->
 					<div class="tweet">
 						<div class="content">
@@ -47,11 +52,13 @@
 							<strong class="fullname">My BFF</strong>
 							<span class="username">@mybff</span>
 
-							<!-- BLACK DIAMOND: Implement the icons for when a tweet is favorited/retweeted in the upper right of the tweet. -->
+							<!-- BLACK DIAMOND: Implement the icons for when a tweet is favorited/retweeted in the
+							upper right of the tweet. -->
 							<!-- HINT: Add to what you created in Step 5 -->
 							<p class="tweet-text">Today is an amazing day.</p>
 
-							<!-- STEP 6: The tweet actions below should only show up when you hover over the tweet. Otherwise, they should be hidden. -->
+							<!-- STEP 6: The tweet actions below should only show up when you hover over the tweet.
+							Otherwise, they should be hidden. -->
 							<!-- HINT: CSS ":hover" pseudo element -->
 							<div class="tweet-actions">
 								<ul>
@@ -62,7 +69,9 @@
 								</ul>
 							</div>
 
-							<!-- STEP 7: The Retweets/timestamp/Reply areas below should also be hidden by default. These should only expand if you click on the tweet. Use a jQuery animation to accomplish the reveal, similar to how it’s done on Twitter.com -->
+							<!-- STEP 7: The Retweets/timestamp/Reply areas below should also be hidden by default.
+							These should only expand if you click on the tweet. Use a jQuery animation to accomplish
+							the reveal, similar to how it’s done on Twitter.com -->
 							<!-- HINT: jQuery ".on" eventHandler -->
 							<div class="stats">
 								<div class="retweets">
@@ -76,14 +85,16 @@
 								<div class="users-interact">
 									<div>
 
-										<!-- BLACK DIAMOND: Implement the Bootstrap tooltips for when you hover over a user’s avatar image -->
+										<!-- BLACK DIAMOND: Implement the Bootstrap tooltips for when you hover over a
+										user’s avatar image -->
 										<!-- HINT: Bootstrap has good documentation =) -->
 										<img src="img/alagoon.jpg" />
 										<img src="img/vklimenko.jpg" />
 									</div>
 								</div>
 
-								<!-- BLACK DIAMOND: Make the timestamp below similar to how they look on Twitter (1h, 18m, 1m) and use the jQuery timeago plugin to make them automatic. -->
+								<!-- BLACK DIAMOND: Make the timestamp below similar to how they look on Twitter
+								(1h, 18m, 1m) and use the jQuery timeago plugin to make them automatic. -->
 								<!-- HINT: Refer to timeago documentation -->
 								<div class="time">
 									1:04 PM - 19 Sep 13
@@ -178,5 +189,6 @@
 				</div><!-- #stream -->
 			</div><!-- #main -->
 		</div><!-- #page-container -->
+		<script src="js/animations.js"></script>
 	</body>
 </html>
