--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
 			</div><!-- #main -->
 		</div><!-- #page-container -->
 		<script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
+		<script src="js/timeago.js"></script>
 		<script src="js/animations.js"></script>
 	</body>
 </html>
